# virtual-people-common

./: .bazelrc  .gitignore  AUTHORS  MODULE.bazel  README.md  WORKSPACE  maven_install.json
.github/workflows/: build-test.yml  lint.yml
imports/com/google/common/truth/: BUILD.bazel
imports/com/google/common/truth/extensions/proto/: BUILD.bazel
imports/org/junit/: BUILD.bazel
src/main/cc/wfa/virtual_people/common/field_filter/: BUILD.bazel  and_filter.cc  and_filter.h  and_filter_test.cc  any_in_filter.cc  any_in_filter.h  any_in_filter_test.cc  equal_filter.cc  equal_filter.h  equal_filter_test.cc  field_filter.cc  field_filter.h  field_filter_test.cc  gt_filter.cc  gt_filter.h  gt_filter_test.cc  has_filter.cc  has_filter.h  has_filter_test.cc  in_filter.cc  in_filter.h  in_filter_test.cc  lt_filter.cc  lt_filter.h  lt_filter_test.cc  not_filter.cc  not_filter.h  not_filter_test.cc  or_filter.cc  or_filter.h  or_filter_test.cc  partial_filter.cc  partial_filter.h  partial_filter_test.cc  true_filter.cc  true_filter.h  true_filter_test.cc
src/main/cc/wfa/virtual_people/common/field_filter/test/: BUILD.bazel  test.proto
src/main/cc/wfa/virtual_people/common/field_filter/utils/: BUILD.bazel  field_util.cc  field_util.h  field_util_test.cc  integer_comparator.cc  integer_comparator.h  integer_comparator_test.cc  message_filter_util.cc  message_filter_util.h  message_filter_util_test.cc  template_util.h  type_convert_util.cc  type_convert_util.h  type_convert_util_test.cc  values_parser.cc  values_parser.h  values_parser_test.cc
src/main/cc/wfa/virtual_people/common/integration_testing_framework/: BUILD.bazel  golden_generator.cc  golden_generator.h
src/main/kotlin/org/wfanet/virtualpeople/common/fieldfilter/: AndFilter.kt  AnyInFilter.kt  BUILD.bazel  EqualFilter.kt  FieldFilter.kt  GtFilter.kt  HasFilter.kt  InFilter.kt  LtFilter.kt  NotFilter.kt  OrFilter.kt  PartialFilter.kt  TrueFilter.kt
src/main/kotlin/org/wfanet/virtualpeople/common/fieldfilter/utils/: BUILD.bazel  FieldUtil.kt  IntegerComparatorUtil.kt  MessageFilterUtil.kt  TypeConvertUtil.kt  ValuesParser.kt
src/main/proto/wfa/virtual_people/common/: BUILD.bazel  config.proto  demographic.proto  event.proto  field_filter.proto  geo_location.proto  label.proto  model.proto  panel_data.proto
src/main/proto/wfa/virtual_people/common/field_filter/test/: BUILD.bazel  test.proto
src/proto/: BUILD.bazel  event.proto  field_filter.proto  model.proto
src/test/cc/wfa/virtual_people/common/field_filter/: BUILD.bazel  and_filter_test.cc  any_in_filter_test.cc  equal_filter_test.cc  field_filter_test.cc  gt_filter_test.cc  has_filter_test.cc  in_filter_test.cc  lt_filter_test.cc  not_filter_test.cc  or_filter_test.cc  partial_filter_test.cc  true_filter_test.cc
src/test/cc/wfa/virtual_people/common/field_filter/test/: BUILD.bazel
src/test/cc/wfa/virtual_people/common/field_filter/utils/: BUILD.bazel  field_util_test.cc  integer_comparator_test.cc  message_filter_util_test.cc  type_convert_util_test.cc  values_parser_test.cc
src/test/cc/wfa/virtual_people/common/integration_testing_framework/: BUILD.bazel  golden_generator_test.cc
src/test/kotlin/org/wfanet/virtualpeople/common/fieldfilter/: AndFilterTest.kt  AnyInFilterTest.kt  BUILD.bazel  EqualFilterTest.kt  FieldFilterTest.kt  GtFilterTest.kt  HasFilterTest.kt  InFilterTest.kt  LtFilterTest.kt  NotFilterTest.kt  OrFilterTest.kt  PartialFilterTest.kt  TrueFilterTest.kt
src/test/kotlin/org/wfanet/virtualpeople/common/fieldfilter/utils/: BUILD.bazel  FieldUtilTest.kt  IntegerComparatorUtilTest.kt  MessageFilterUtilTest.kt  TypeConvertUtilTest.kt  ValuesParserTest.kt
