module(
    name = "virtual-people-common",
    repo_name = "wfa_virtual_people_common",
)

TRUTH_VERSION = "1.1.2"

# Bazel Central Registry modules.
bazel_dep(
    name = "rules_proto",
    version = "5.3.0-21.7",
)
bazel_dep(
    name = "protobuf",
    version = "21.7",
    repo_name = "com_google_protobuf",
)
bazel_dep(
    name = "rules_cc",
    version = "0.0.9",
)
bazel_dep(
    name = "abseil-cpp",
    version = "20230802.0.bcr.1",
    repo_name = "com_google_absl",
)
bazel_dep(
    name = "googletest",
    version = "1.14.0.bcr.1",
    repo_name = "com_google_googletest",
)
bazel_dep(
    name = "rules_java",
    version = "7.2.0",
)
bazel_dep(
    name = "rules_jvm_external",
    version = "5.3",
)

# WFA registry modules.
bazel_dep(
    name = "common-cpp",
    version = "0.11.0",
    repo_name = "wfa_common_cpp",
)
bazel_dep(
    name = "rules_kotlin_jvm",
    # DO_NOT_SUBMIT(world-federation-of-advertisers/rules_kotlin_jvm#2): Use version.
    version = "overridden",
    repo_name = "wfa_rules_kotlin_jvm",
)
archive_override(
    module_name = "rules_kotlin_jvm",
    integrity = "sha256-PfCioCoFGDR0lQuqD0kKEFpC5XQP9FHi0LPsrgEscSw=",
    strip_prefix = "rules_kotlin_jvm-52f41ab9fa9dbc315334ff643bfc055212072558",
    urls = ["https://github.com/world-federation-of-advertisers/rules_kotlin_jvm/archive/52f41ab9fa9dbc315334ff643bfc055212072558.tar.gz"],
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "junit:junit:4.13.2",
        "com.google.truth:truth:" + TRUTH_VERSION,
        "com.google.truth.extensions:truth-java8-extension:" + TRUTH_VERSION,
        "com.google.truth.extensions:truth-proto-extension:" + TRUTH_VERSION,
        "com.google.truth.extensions:truth-liteproto-extension:" + TRUTH_VERSION,
    ],
    fetch_sources = True,  # For IDE integration.
    strict_visibility = True,
)
use_repo(maven, "maven")
