module(
    name = "virtual-people-common",
    repo_name = "wfa_virtual_people_common",
)

TRUTH_VERSION = "1.4.4"

# Bazel Central Registry modules.
bazel_dep(
    name = "rules_cc",
    version = "0.1.0",
)
bazel_dep(
    name = "protobuf",
    version = "27.3",
    repo_name = "com_google_protobuf",
)
bazel_dep(
    name = "abseil-cpp",
    version = "20240722.0.bcr.2",
    repo_name = "com_google_absl",
)
bazel_dep(
    name = "googletest",
    version = "1.15.2",
    repo_name = "com_google_googletest",
)
bazel_dep(
    name = "rules_java",
    version = "8.6.2",
)
bazel_dep(
    name = "rules_jvm_external",
    version = "6.6",
)

# WFA registry modules.
bazel_dep(
    name = "common-cpp",
    version = "0.13.0",
    repo_name = "wfa_common_cpp",
)
bazel_dep(
    name = "rules_kotlin_jvm",
    version = "0.5.0",
    repo_name = "wfa_rules_kotlin_jvm",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.artifact(
    testonly = True,
    artifact = "truth",
    group = "com.google.truth",
    version = TRUTH_VERSION,
)
maven.artifact(
    testonly = True,
    artifact = "truth-java8-extension",
    group = "com.google.truth.extensions",
    version = TRUTH_VERSION,
)
maven.artifact(
    testonly = True,
    artifact = "truth-proto-extension",
    group = "com.google.truth.extensions",
    version = TRUTH_VERSION,
)
maven.artifact(
    testonly = True,
    artifact = "truth-liteproto-extension",
    group = "com.google.truth.extensions",
    version = TRUTH_VERSION,
)
maven.install(
    artifacts = [
        "junit:junit:4.13.2",
    ],
    fail_if_repin_required = True,
    fetch_sources = True,  # For IDE support.
    lock_file = "//:maven_install.json",
    resolver = "maven",
    strict_visibility = True,
)
use_repo(maven, "maven")
