load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_java//java:defs.bzl", "java_proto_library")
load("@wfa_common_jvm//build/kt_jvm_proto:defs.bzl", "kt_jvm_proto_library")

package(default_visibility = ["//visibility:public"])

_IMPORT_PREFIX = "/src/main/proto"

proto_library(
    name = "model_proto",
    srcs = ["model.proto"],
    strip_import_prefix = _IMPORT_PREFIX,
    deps = [
        ":demographic_proto",
        ":event_proto",
        ":field_filter_proto",
        ":label_proto",
        "@com_google_protobuf//:field_mask_proto",
    ],
)

cc_proto_library(
    name = "model_cc_proto",
    deps = [":model_proto"],
)

java_proto_library(
    name = "model_java_proto",
    deps = [":model_proto"],
)

kt_jvm_proto_library(
    name = "model_kt_jvm_proto",
    srcs = [":model_proto"],
    deps = [":model_java_proto"],
)

proto_library(
    name = "event_proto",
    srcs = ["event.proto"],
    strip_import_prefix = _IMPORT_PREFIX,
    deps = [
        ":demographic_proto",
        ":geo_location_proto",
        ":label_proto",
        ":panel_data_proto",
    ],
)

cc_proto_library(
    name = "event_cc_proto",
    deps = [":event_proto"],
)

java_proto_library(
    name = "event_java_proto",
    deps = [":event_proto"],
)

kt_jvm_proto_library(
    name = "event_kt_jvm_proto",
    srcs = [":event_proto"],
    deps = [":event_java_proto"],
)

proto_library(
    name = "label_proto",
    srcs = ["label.proto"],
    strip_import_prefix = _IMPORT_PREFIX,
    deps = [
        ":demographic_proto",
    ],
)

cc_proto_library(
    name = "label_cc_proto",
    deps = [":label_proto"],
)

java_proto_library(
    name = "label_java_proto",
    deps = [":label_proto"],
)

kt_jvm_proto_library(
    name = "label_kt_jvm_proto",
    srcs = [":label_proto"],
    deps = [":label_java_proto"],
)

proto_library(
    name = "demographic_proto",
    srcs = ["demographic.proto"],
    strip_import_prefix = _IMPORT_PREFIX,
)

cc_proto_library(
    name = "demographic_cc_proto",
    deps = [":demographic_proto"],
)

java_proto_library(
    name = "demographic_java_proto",
    deps = [":demographic_proto"],
)

kt_jvm_proto_library(
    name = "demographic_kt_jvm_proto",
    srcs = [":demographic_proto"],
    deps = [":demographic_java_proto"],
)

proto_library(
    name = "geo_location_proto",
    srcs = ["geo_location.proto"],
    strip_import_prefix = _IMPORT_PREFIX,
)

cc_proto_library(
    name = "geo_location_cc_proto",
    deps = [":geo_location_proto"],
)

java_proto_library(
    name = "geo_location_java_proto",
    deps = [":geo_location_proto"],
)

kt_jvm_proto_library(
    name = "geo_location_kt_jvm_proto",
    srcs = [":geo_location_proto"],
    deps = [":geo_location_java_proto"],
)

proto_library(
    name = "panel_data_proto",
    srcs = ["panel_data.proto"],
    strip_import_prefix = _IMPORT_PREFIX,
    deps = [
        ":demographic_proto",
    ],
)

cc_proto_library(
    name = "panel_data_cc_proto",
    deps = [":panel_data_proto"],
)

java_proto_library(
    name = "panel_data_java_proto",
    deps = [":panel_data_proto"],
)

kt_jvm_proto_library(
    name = "panel_data_kt_jvm_proto",
    srcs = [":panel_data_proto"],
    deps = [":panel_data_java_proto"],
)

proto_library(
    name = "field_filter_proto",
    srcs = ["field_filter.proto"],
    strip_import_prefix = _IMPORT_PREFIX,
)

cc_proto_library(
    name = "field_filter_cc_proto",
    deps = [":field_filter_proto"],
)

java_proto_library(
    name = "field_filter_java_proto",
    deps = [":field_filter_proto"],
)

kt_jvm_proto_library(
    name = "field_filter_kt_jvm_proto",
    srcs = [":field_filter_proto"],
    deps = [":field_filter_java_proto"],
)

proto_library(
    name = "config_proto",
    srcs = ["config.proto"],
    strip_import_prefix = _IMPORT_PREFIX,
)

cc_proto_library(
    name = "config_cc_proto",
    deps = [":config_proto"],
)

java_proto_library(
    name = "config_java_proto",
    deps = [":config_proto"],
)

kt_jvm_proto_library(
    name = "config_kt_jvm_proto",
    srcs = [":config_proto"],
    deps = [":config_java_proto"],
)
