load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

_INCLUDE_PREFIX = "/src/main/cc"

cc_library(
    name = "field_filter",
    srcs = [
        "and_filter.cc",
        "equal_filter.cc",
        "field_filter.cc",
        "partial_filter.cc",
        "true_filter.cc",
    ],
    hdrs = [
        "and_filter.h",
        "equal_filter.h",
        "field_filter.h",
        "partial_filter.h",
        "true_filter.h",
    ],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        "//src/main/cc/wfa/virtual_people/common/field_filter/utils:field_util",
        "//src/main/cc/wfa/virtual_people/common/field_filter/utils:type_convert_util",
        "//src/main/proto/wfa/virtual_people/common:field_filter_cc_proto",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//:protobuf",
        "@cross_media_measurement//src/main/cc/wfa/measurement/common:macros",
    ],
)

cc_test(
    name = "equal_filter_test",
    srcs = ["equal_filter_test.cc"],
    deps = [
        ":field_filter",
        "//src/main/cc/wfa/virtual_people/common/field_filter/test:test_cc_proto",
        "//src/main/proto/wfa/virtual_people/common:field_filter_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
        "@com_google_protobuf//:protobuf",
        "@cross_media_measurement//src/test/cc/testutil:matchers",
        "@cross_media_measurement//src/test/cc/testutil:status_macros",
    ],
)

cc_test(
    name = "and_filter_test",
    srcs = ["and_filter_test.cc"],
    deps = [
        ":field_filter",
        "//src/main/cc/wfa/virtual_people/common/field_filter/test:test_cc_proto",
        "//src/main/proto/wfa/virtual_people/common:field_filter_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
        "@com_google_protobuf//:protobuf",
        "@cross_media_measurement//src/test/cc/testutil:matchers",
        "@cross_media_measurement//src/test/cc/testutil:status_macros",
    ],
)

cc_test(
    name = "true_filter_test",
    srcs = ["and_filter_test.cc"],
    deps = [
        ":field_filter",
        "//src/main/cc/wfa/virtual_people/common/field_filter/test:test_cc_proto",
        "//src/main/proto/wfa/virtual_people/common:field_filter_cc_proto",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
        "@cross_media_measurement//src/test/cc/testutil:matchers",
        "@cross_media_measurement//src/test/cc/testutil:status_macros",
    ],
)

cc_test(
    name = "partial_filter_test",
    srcs = ["partial_filter_test.cc"],
    deps = [
        ":field_filter",
        "//src/main/cc/wfa/virtual_people/common/field_filter/test:test_cc_proto",
        "//src/main/proto/wfa/virtual_people/common:field_filter_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
        "@com_google_protobuf//:protobuf",
        "@cross_media_measurement//src/test/cc/testutil:matchers",
        "@cross_media_measurement//src/test/cc/testutil:status_macros",
    ],
)
