load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = [
    "//src/main/cc/wfa/virtual_people/common/integration_testing_framework:__subpackages__",
    "//src/test/cc/wfa/virtual_people/common/integration_testing_framework:__subpackages__",
])

_INCLUDE_PREFIX = "/src/main/cc"

cc_library(
    name = "golden_generator",
    srcs = ["golden_generator.cc"],
    hdrs = ["golden_generator.h"],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        "//src/main/proto/wfa/virtual_people/common:config_cc_proto",
        "@bazel_tools//tools/cpp/runfiles",
    ],
)