load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//src/main/cc/wfa/virtual_people/common/field_filter:__subpackages__"])

_INCLUDE_PREFIX = "/src/main/cc"

cc_library(
    name = "field_util",
    srcs = ["field_util.cc"],
    hdrs = ["field_util.h"],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_test(
    name = "field_util_test",
    srcs = ["field_util_test.cc"],
    deps = [
        ":field_util",
        "//src/main/cc/wfa/virtual_people/common/field_filter/test:test_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
        "@com_google_protobuf//:protobuf",
        "@cross_media_measurement//src/test/cc/testutil:matchers",
    ],
)

cc_library(
    name = "type_convert_util",
    srcs = ["type_convert_util.cc"],
    hdrs = ["type_convert_util.h"],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_test(
    name = "type_convert_util_test",
    srcs = ["type_convert_util_test.cc"],
    deps = [
        ":type_convert_util",
        "//src/main/cc/wfa/virtual_people/common/field_filter/test:test_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
        "@com_google_protobuf//:protobuf",
    ],
)
